--- a/api/deno.json
+++ b/api/deno.json
@@ -10,8 +10,10 @@
     "@fedify/fedify": "jsr:@fedify/fedify@^1.10.0",
     "@fedify/fedify/x/hono": "jsr:@fedify/fedify@^1.10.0/x/hono",
     "@fedify/denokv": "jsr:@fedify/denokv@^1.10.0",
-    "@db/sqlite": "jsr:@db/sqlite@^0.12.0",
-    "stringify-entities": "npm:stringify-entities@^4.0.4"
+    "postgres": "https://deno.land/x/postgres@v0.19.3/mod.ts",
+    "stringify-entities": "npm:stringify-entities@^4.0.4",
+    "@std/path": "jsr:@std/path@^1.0.0",
+    "@std/fs": "jsr:@std/fs@^1.0.0"
   },
   "unstable": ["kv", "temporal"],
   "compilerOptions": {
