--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@ services:
   db:
     image: postgres:16-alpine
     environment:
-      POSTGRES_USER: refriend
-      POSTGRES_PASSWORD: refriend
-      POSTGRES_DB: refriend
+      POSTGRES_USER: riff
+      POSTGRES_PASSWORD: riff
+      POSTGRES_DB: riff
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./api/schema.pg.sql:/docker-entrypoint-initdb.d/schema.sql:ro
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U refriend"]
+      test: ["CMD-SHELL", "pg_isready -U riff"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -25,7 +25,7 @@ services:
       - 8.8.8.8
       - 8.8.4.4
     environment:
-      DATABASE_URL: postgres://refriend:refriend@db:5432/refriend
+      DATABASE_URL: postgres://riff:riff@db:5432/riff
       STATIC_DIR: /app/static
       PORT: "8000"
     depends_on:
