--- a/api/.env.example
+++ b/api/.env.example
@@ -5,6 +5,11 @@ DATABASE_URL=postgres://riff:riff@localhost:5432/riff
 PORT=8000
 STATIC_DIR=../web/dist
 
+# Domain (used for federation URIs and seeding)
+# For local dev: localhost:8000
+# For ngrok: your-subdomain.ngrok-free.app
+DOMAIN=localhost:8000
+
 # CORS (comma-separated origins for production)
 ALLOWED_ORIGINS=https://yourdomain.com
 
