--- a/api/deno.json
+++ b/api/deno.json
@@ -16,8 +16,7 @@
     "@fedify/denokv": "jsr:@fedify/denokv@^1.10.0",
     "postgres": "https://deno.land/x/postgres@v0.19.3/mod.ts",
     "stringify-entities": "npm:stringify-entities@^4.0.4",
-    "@std/path": "jsr:@std/path@^1.0.0",
-    "@std/fs": "jsr:@std/fs@^1.0.0"
+    "@aws-sdk/client-s3": "npm:@aws-sdk/client-s3@^3.700.0"
   },
   "unstable": ["kv", "temporal"],
   "compilerOptions": {
