--- a/api/deno.json
+++ b/api/deno.json
@@ -13,6 +13,7 @@
     "@hono/hono": "jsr:@hono/hono@^4.11.5",
     "@fedify/fedify": "jsr:@fedify/fedify@^1.10.2",
     "@fedify/fedify/x/hono": "jsr:@fedify/fedify@^1.10.2/x/hono",
+    "@fedify/hono": "jsr:@fedify/hono@^1.10.0",
     "@fedify/denokv": "jsr:@fedify/denokv@^1.10.2",
     "postgres": "https://deno.land/x/postgres@v0.19.3/mod.ts",
     "stringify-entities": "npm:stringify-entities@^4.0.4",
