--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,64 @@
 # Production Environment Configuration
 # Copy this to .env and customize for your deployment
+# IMPORTANT: Never commit the actual .env file to version control!
 
-# Required: Your domain (without protocol)
+# ============ Required Settings ============
+
+# Your domain (without protocol)
 DOMAIN=example.com
 
-# Required: CORS allowed origins (comma-separated)
+# CORS allowed origins (comma-separated)
 ALLOWED_ORIGINS=https://example.com
 
-# Database (override for production)
+# ============ Database ============
+
+# PostgreSQL credentials (change these for production!)
+POSTGRES_USER=riff
+POSTGRES_PASSWORD=your-secure-password-here
+POSTGRES_DB=riff
+
+# Full database URL (used by API)
 # DATABASE_URL=postgres://user:password@host:5432/dbname
 
-# S3 Storage (override for production)
-# S3_BUCKET=your-bucket
-# S3_REGION=us-east-1
-# S3_PUBLIC_URL=https://cdn.example.com
-# AWS_ACCESS_KEY_ID=your-access-key
-# AWS_SECRET_ACCESS_KEY=your-secret-key
+# ============ S3 Storage ============
 
-# Email (Scaleway Transactional Email)
-# SCW_SECRET_KEY=your-secret-key
-# SCW_PROJECT_ID=your-project-id
-# SCW_REGION=fr-par
-# EMAIL_FROM=noreply@example.com
-# APP_URL=https://example.com
+# For production, use your S3-compatible storage provider
+S3_BUCKET=your-bucket
+S3_REGION=us-east-1
+S3_ENDPOINT=https://s3.amazonaws.com
+S3_PUBLIC_URL=https://cdn.example.com
+AWS_ACCESS_KEY_ID=your-access-key
+AWS_SECRET_ACCESS_KEY=your-secret-key
+
+# For development with MinIO (change these!)
+# MINIO_ROOT_USER=minioadmin
+# MINIO_ROOT_PASSWORD=minioadmin
+
+# ============ Email (Scaleway Transactional Email) ============
+
+# Required for password reset functionality
+SCW_SECRET_KEY=your-secret-key
+SCW_PROJECT_ID=your-project-id
+SCW_REGION=fr-par
+EMAIL_FROM=noreply@example.com
+APP_URL=https://example.com
+
+# ============ Security ============
+
+# Set to "true" only if running behind a trusted reverse proxy
+# (nginx, Cloudflare, etc.) that sets X-Forwarded-For headers
+TRUST_PROXY=false
+
+# Environment: "production" or "development"
+ENV=production
+
+# ============ Performance ============
+
+# Database connection pool size (default: 20)
+# DB_POOL_SIZE=20
+
+# Number of queue workers for federation (default: auto)
+# QUEUE_WORKERS=4
+
+# Node type for scaling: unset (default), "web", or "worker"
+# NODE_TYPE=
