--- a/api/.env.example
+++ b/api/.env.example
@@ -1,3 +1,6 @@
+# API Environment Configuration
+# For local development (running without Docker)
+
 # Database
 DATABASE_URL=postgres://riff:riff@localhost:5432/riff
 
@@ -11,7 +14,14 @@ STATIC_DIR=../web/dist
 DOMAIN=localhost:8000
 
 # CORS (comma-separated origins for production)
-ALLOWED_ORIGINS=https://yourdomain.com
+ALLOWED_ORIGINS=http://localhost:8000,http://localhost:5173
+
+# Security
+# Set to "true" only if running behind a trusted reverse proxy
+TRUST_PROXY=false
+
+# Environment
+ENV=development
 
 # Email (Scaleway Transactional Email)
 # Required for password reset functionality
@@ -20,3 +30,11 @@ SCW_PROJECT_ID=
 SCW_REGION=fr-par
 EMAIL_FROM=noreply@yourdomain.com
 APP_URL=https://yourdomain.com
+
+# S3 Storage (optional - for local dev, can use MinIO)
+# S3_BUCKET=riff-uploads
+# S3_REGION=us-east-1
+# S3_ENDPOINT=http://localhost:9000
+# S3_PUBLIC_URL=http://localhost:9000/riff-uploads
+# AWS_ACCESS_KEY_ID=minioadmin
+# AWS_SECRET_ACCESS_KEY=minioadmin
