--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,20 +1,35 @@
-FROM denoland/deno:latest
+FROM denoland/deno:2.1.4
 
 WORKDIR /app
 
-# Create data directory for KV persistence
-RUN mkdir -p /data
+# Create non-root user for security
+RUN addgroup --gid 1000 deno && \
+    adduser --uid 1000 --gid 1000 --disabled-password --gecos "" deno
+
+# Create data directory for KV persistence with correct ownership
+RUN mkdir -p /data && chown deno:deno /data
 
 # Copy dependency files first for caching
-COPY deno.json deno.lock* ./
+COPY --chown=deno:deno deno.json deno.lock* ./
 
 # Cache dependencies
 RUN deno install
 
 # Copy source and schema
-COPY src/ ./src/
-COPY schema.pg.sql ./
+COPY --chown=deno:deno src/ ./src/
+COPY --chown=deno:deno schema.pg.sql ./
+
+# Switch to non-root user
+USER deno
 
 EXPOSE 8000
 
-CMD ["deno", "run", "--allow-net", "--allow-env", "--allow-read", "--unstable-kv", "--unstable-temporal", "src/main.ts"]
+# Scoped permissions: only allow specific env vars and paths
+CMD ["deno", "run", \
+  "--allow-net", \
+  "--allow-env=DATABASE_URL,PORT,DOMAIN,STATIC_DIR,DENO_KV_PATH,S3_BUCKET,S3_REGION,S3_ENDPOINT,S3_PUBLIC_URL,AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY,ALLOWED_ORIGINS,SCW_SECRET_KEY,SCW_PROJECT_ID,SCW_REGION,EMAIL_FROM,APP_URL,NODE_TYPE,QUEUE_WORKERS,ENV", \
+  "--allow-read=/app,/data", \
+  "--allow-write=/data", \
+  "--unstable-kv", \
+  "--unstable-temporal", \
+  "src/main.ts"]
