--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   db:
     image: postgres:16-alpine
     environment:
-      POSTGRES_USER: riff
-      POSTGRES_PASSWORD: riff
-      POSTGRES_DB: riff
+      POSTGRES_USER: ${POSTGRES_USER:-riff}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-riff}
+      POSTGRES_DB: ${POSTGRES_DB:-riff}
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./api/schema.pg.sql:/docker-entrypoint-initdb.d/schema.sql:ro
@@ -22,8 +22,8 @@ services:
     image: minio/minio:latest
     command: server /data --console-address ":9001"
     environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin}
     volumes:
       - minio_data:/data
     ports:
@@ -40,9 +40,12 @@ services:
     depends_on:
       minio:
         condition: service_healthy
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin}
     entrypoint: >
       /bin/sh -c "
-      mc alias set myminio http://minio:9000 minioadmin minioadmin;
+      mc alias set myminio http://minio:9000 $${MINIO_ROOT_USER} $${MINIO_ROOT_PASSWORD};
       mc mb myminio/riff-uploads --ignore-existing;
       mc anonymous set download myminio/riff-uploads;
       exit 0;
@@ -57,7 +60,7 @@ services:
       - 8.8.8.8
       - 8.8.4.4
     environment:
-      DATABASE_URL: postgres://riff:riff@db:5432/riff
+      DATABASE_URL: postgres://${POSTGRES_USER:-riff}:${POSTGRES_PASSWORD:-riff}@db:5432/${POSTGRES_DB:-riff}
       # Set DOMAIN via .env file or override in production
       DOMAIN: ${DOMAIN:-localhost:8000}
       STATIC_DIR: /app/static
