--- a/.env.example
+++ b/.env.example
@@ -1,64 +1,43 @@
-# Production Environment Configuration
-# Copy this to .env and customize for your deployment
-# IMPORTANT: Never commit the actual .env file to version control!
+# Riff Environment Configuration
+# Copy to .env and fill in values
+# NEVER commit .env to version control
 
-# ============ Required Settings ============
+# =============================================================================
+# REQUIRED
+# =============================================================================
 
-# Your domain (without protocol)
-DOMAIN=example.com
+# Your domain (without https://)
+DOMAIN=yourdomain.com
 
-# CORS allowed origins (comma-separated)
-ALLOWED_ORIGINS=https://example.com
+# PostgreSQL (from Scaleway Managed Database)
+DATABASE_URL=postgres://user:password@host:port/riff?sslmode=require
 
-# ============ Database ============
-
-# PostgreSQL credentials (change these for production!)
-POSTGRES_USER=riff
-POSTGRES_PASSWORD=your-secure-password-here
-POSTGRES_DB=riff
-
-# Full database URL (used by API)
-# DATABASE_URL=postgres://user:password@host:5432/dbname
-
-# ============ S3 Storage ============
-
-# For production, use your S3-compatible storage provider
-S3_BUCKET=your-bucket
-S3_REGION=us-east-1
-S3_ENDPOINT=https://s3.amazonaws.com
-S3_PUBLIC_URL=https://cdn.example.com
+# Object Storage (Scaleway S3)
+S3_BUCKET=riff-uploads
+S3_REGION=fr-par
+S3_ENDPOINT=https://s3.fr-par.scw.cloud
+S3_PUBLIC_URL=https://riff-uploads.s3.fr-par.scw.cloud
 AWS_ACCESS_KEY_ID=your-access-key
 AWS_SECRET_ACCESS_KEY=your-secret-key
 
-# For development with MinIO (change these!)
-# MINIO_ROOT_USER=minioadmin
-# MINIO_ROOT_PASSWORD=minioadmin
-
-# ============ Email (Scaleway Transactional Email) ============
-
-# Required for password reset functionality
-SCW_SECRET_KEY=your-secret-key
+# Transactional Email (Scaleway TEM)
+SCW_SECRET_KEY=your-scw-secret-key
 SCW_PROJECT_ID=your-project-id
 SCW_REGION=fr-par
-EMAIL_FROM=noreply@example.com
-APP_URL=https://example.com
+EMAIL_FROM=noreply@yourdomain.com
 
-# ============ Security ============
+# =============================================================================
+# OPTIONAL (defaults shown)
+# =============================================================================
 
-# Set to "true" only if running behind a trusted reverse proxy
-# (nginx, Cloudflare, etc.) that sets X-Forwarded-For headers
-TRUST_PROXY=false
+# Database pool size (see DEPLOY.md for sizing guide)
+# DB_POOL_SIZE=40
 
-# Environment: "production" or "development"
-ENV=production
+# Environment
+# ENV=production
 
-# ============ Performance ============
+# Trust reverse proxy headers (set true when behind Caddy)
+# TRUST_PROXY=true
 
-# Database connection pool size (default: 20)
-# DB_POOL_SIZE=20
-
-# Number of queue workers for federation (default: auto)
+# Federation queue workers
 # QUEUE_WORKERS=4
-
-# Node type for scaling: unset (default), "web", or "worker"
-# NODE_TYPE=
