--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,8 +1,13 @@
-# Production compose - single server deployment
-# Requires: .env file with production credentials
-# Frontend must be pre-built: cd web && npm run build
+# Production compose - pulls from Scaleway Container Registry
+# Deploy: docker compose -f docker-compose.prod.yml pull && docker compose -f docker-compose.prod.yml up -d
 
 services:
+  # Frontend init - copies built files to shared volume
+  frontend:
+    image: rg.fr-par.scw.cloud/riff-app/frontend:${TAG:-latest}
+    volumes:
+      - web_dist:/srv/web
+
   caddy:
     image: caddy:2-alpine
     restart: unless-stopped
@@ -11,23 +16,25 @@ services:
       - "443:443"
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile:ro
-      - ./web/dist:/srv/web:ro
+      - web_dist:/srv/web:ro
       - caddy_data:/data
       - caddy_config:/config
+    environment:
+      DOMAIN: ${DOMAIN}
     depends_on:
+      frontend:
+        condition: service_completed_successfully
       api:
         condition: service_healthy
     networks:
       - riff
 
   api:
-    build:
-      context: ./api
+    image: rg.fr-par.scw.cloud/riff-app/api:${TAG:-latest}
     restart: unless-stopped
     environment:
       DATABASE_URL: ${DATABASE_URL}
-      # Increase pool size - DB-DEV-S allows ~50 connections, leave 10 for admin
-      DB_POOL_SIZE: "40"
+      DB_POOL_SIZE: ${DB_POOL_SIZE:-40}
       DOMAIN: ${DOMAIN}
       PORT: "8000"
       ALLOWED_ORIGINS: https://${DOMAIN}
@@ -44,7 +51,6 @@ services:
       APP_URL: https://${DOMAIN}
       DENO_KV_PATH: /data/kv.sqlite
       ENV: production
-      # Trust Caddy's X-Forwarded-For headers for rate limiting
       TRUST_PROXY: "true"
     volumes:
       - kvdata:/data
@@ -58,6 +64,7 @@ services:
       - riff
 
 volumes:
+  web_dist:
   caddy_data:
   caddy_config:
   kvdata:
