--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,7 +90,27 @@ services:
       - kvdata:/data
     command: ["deno", "run", "--allow-net", "--allow-env", "--allow-read", "--allow-write=/data", "--unstable-kv", "--unstable-temporal", "--watch", "src/main.ts"]
 
+  web:
+    image: node:22-alpine
+    working_dir: /app
+    volumes:
+      - ./web:/app
+      - web_node_modules:/app/node_modules
+    ports:
+      - "5173:5173"
+    command: sh -c "npm install && npm run dev -- --host 0.0.0.0"
+
+  caddy:
+    image: caddy:2-alpine
+    ports:
+      - "9999:9999"
+    volumes:
+      - ./Caddyfile.dev:/etc/caddy/Caddyfile:ro
+    depends_on:
+      - api
+
 volumes:
   pgdata:
   minio_data:
   kvdata:
+  web_node_modules:
