--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -73,6 +73,19 @@ services:
         max-size: "10m"
         max-file: "3"
 
+  dozzle:
+    image: amir20/dozzle:latest
+    restart: unless-stopped
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    networks:
+      - riff
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "5m"
+        max-file: "2"
+
 volumes:
   web_dist:
   caddy_data:
