--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,6 @@ services:
       POSTGRES_DB: ${POSTGRES_DB:-riff}
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./api/schema.pg.sql:/docker-entrypoint-initdb.d/schema.sql:ro
     ports:
       - "5432:5432"
     healthcheck:
@@ -87,6 +86,7 @@ services:
       start_period: 15s
     volumes:
       - ./api/src:/app/src:ro
+      - ./api/migrations:/app/migrations:ro
       - kvdata:/data
     command: ["deno", "run", "--allow-net", "--allow-env", "--allow-read", "--allow-write=/data", "--unstable-kv", "--unstable-temporal", "--watch", "src/main.ts"]
 
