--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,8 @@ EMAIL_FROM=noreply@yourdomain.com
 
 # Federation queue workers
 # QUEUE_WORKERS=4
+
+# Web Push (VAPID keys — generate with: cd api && deno task generate-vapid)
+# If not set, keys are auto-generated and stored in Deno KV for local dev
+# VAPID_PUBLIC_KEY=
+# VAPID_PRIVATE_KEY=
