--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -27,7 +27,7 @@ EXPOSE 8000
 # Scoped permissions: only allow specific env vars and paths
 CMD ["deno", "run", \
   "--allow-net", \
-  "--allow-env=DATABASE_URL,PORT,DOMAIN,STATIC_DIR,DENO_KV_PATH,S3_BUCKET,S3_REGION,S3_ENDPOINT,S3_PUBLIC_URL,AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY,ALLOWED_ORIGINS,SCW_SECRET_KEY,SCW_PROJECT_ID,SCW_REGION,EMAIL_FROM,APP_URL,NODE_TYPE,QUEUE_WORKERS,ENV", \
+  "--allow-env=DATABASE_URL,PORT,DOMAIN,STATIC_DIR,DENO_KV_PATH,S3_BUCKET,S3_REGION,S3_ENDPOINT,S3_PUBLIC_URL,AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY,ALLOWED_ORIGINS,SCW_SECRET_KEY,SCW_PROJECT_ID,SCW_REGION,EMAIL_FROM,APP_URL,NODE_TYPE,QUEUE_WORKERS,ENV,VAPID_PUBLIC_KEY,VAPID_PRIVATE_KEY", \
   "--allow-read=/app,/data", \
   "--allow-write=/data", \
   "--unstable-kv", \
